Add index.html and style.css files

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <section class="main-section" id="What_you_should_already_know">
         <h2>What you should already know</h2>
         <article>
-          <h3>This guide assumes you have the following basic background:</h3>
+          <h3>This guide assumes you have the following basic backgroud:</h3>
           <ul>
             <li>
               A general understanding of the Internet and the World Wide Web
